--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -166,12 +166,19 @@ p {
 }
 
 #scrollIndicator {
+  background-color: transparent;
+  border: none;
   position: absolute;
   bottom: 1.5rem;
   font-size: 0.9rem;
   color: var(--wiki-gray);
-  animation: fadeInUp 1.0s ease-out 0.6s forwards; 
+  animation: fadeInUp 1.0s ease-out 0.6s forwards;
+  transition: color 0.2s;
   opacity: 0;
+}
+
+#scrollIndicator:hover{
+  color: var(--wiki-black);
 }
 
 /* ================================================ */
@@ -451,16 +458,21 @@ html {
 #backButton{
   z-index: 1000;
   position: absolute;  
-  top: 20px;           
-  left: 20px;          
-  padding: 10px 15px;  
-  font-family: 'Helvetica', sans-serif;
-  font-size: 18px;
-  cursor: pointer;
-  background-color: #3498db;
-  color: white;
+  top: 0px;           
+  left: 0px;          
+  padding: 20px 30px;  
+  font-size: 2.0rem;
+  font-family: 'Hoefler Text', serif;
+  background-color: transparent;
   border: none;
-  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+#backButton:hover .arrow{
+  display: inline-block;
 }
 
 #graphPageContainer{
@@ -477,7 +489,57 @@ html {
   font-size: 50px;
   color: black;
 }
+#infoButton{
+  z-index: 1000;
+  position: absolute;  
+  bottom: 20px;           
+  left: 20px;          
+  padding: 5px 12px;  
+  font-size: 1.5rem;
+  font-family: 'arial';
+  font-weight: 600;
+  background-color: #D3D3D3;
+  border-radius: 50%;
+  cursor: pointer;
+  opacity: 50%;
+}
 
+#infoContainer{
+  z-index: 1000;
+  opacity: 70%;
+  display: none;
+  background-color: white;
+  border: 1px solid var(--wiki-border);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 1rem;
+  bottom: 80px;           
+  left: 20px;  
+}
+
+#infoButton:hover + #infoContainer{
+  display: flex;
+}
+/*
+.optionsContainer{
+  z-index: 1000;
+  background-color: white;
+  border: 1px solid var(--wiki-border);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  min-width: 15rem;
+  top: 70px;           
+  right: 30px;  
+  padding: 1rem;
+  gap: 1rem;
+  transform-origin: top right;
+  animation: growDown 0.2s ease-out;
+}
+*/
 /* ================================================ */
 /* Graph  */
 /* ================================================ */
@@ -487,9 +549,114 @@ html {
 }
 
 #graphCanvas{
+  position: relative;
   width: 100%;    
-  height: 100%;   
+  height: 100%;
 }
+
+#dropDownButton{
+  z-index: 1000;
+  position: absolute;  
+  top: 0px;           
+  right: 0px;          
+  padding: 20px 30px;  
+  font-size: 2.0rem;
+  font-family: 'Hoefler Text', serif;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+#dropDownButton:hover .arrow,
+.arrow.open {
+  display: inline-block;
+}
+
+.arrow.open {
+  transform: rotate(180deg);
+}
+
+.arrow {
+  display: none;
+  transition: transform 0.2s ease;
+  font-size: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.optionsContainer{
+  z-index: 1000;
+  background-color: white;
+  border: 1px solid var(--wiki-border);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  min-width: 15rem;
+  top: 70px;           
+  right: 30px;  
+  padding: 1rem;
+  gap: 1rem;
+  transform-origin: top right;
+  animation: growOut 0.2s ease-out;
+}
+
+.option {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.optionsTitle{
+  font-size: 1.2rem;  
+  font-weight: 700;
+}
+
+.optionsText{
+  font-size: 1rem;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 0.1rem;
+  background: var(--wiki-border);
+  cursor: pointer;
+  margin: 0.5rem 0;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 0.3rem;
+  height: 1.2rem;
+  background: var(--wiki-gray);
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 0.3rem;
+  height: 1.2rem;
+  background: var(--wiki-gray);
+  cursor: pointer;
+}
+
+.option select {
+  padding: 0.5rem;
+  border: 1px solid #d1d5db;
+  cursor: pointer;
+  transition: border-color 0.2s;
+}
+
+.option select:hover {
+  border-color: var(--wiki-hover-blue);
+}
+
 
 /* ================================================ */
 /* ANIMATIONS */
@@ -524,6 +691,17 @@ html {
         flex-direction: column;
         gap: 1rem;
     }
+}
+
+@keyframes growOut {
+  from {
+    opacity: 0;
+    transform: scaleY(0);
+  }
+  to {
+    opacity: 1;
+    transform: scaleY(1);
+  }
 }
 
 /* Initial state: */
